k8s/mcp-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-server
  labels:
    app: mcp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-server
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: mcp-server
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: mcp-server
          image: ghcr.io/rajubklab/turbo-demo/mcp-server:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
