k8s/mcp-server/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mcp-server-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mcpserver.rajubk.com`)
      kind: Rule
      services:
        - name: mcp-server-service
          port: 80
      middlewares:
        - name: authentik
  tls:
    secretName: test-rajubk-com-tls
